# xdot-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  justfile  pyproject.toml
.github/workflows/: rust.yml
src/: graph_ext.rs  layout.rs  lib.rs  main.rs  xdot.rs  xdot_parse.rs
src/xdot/: attrs.rs  declarative.rs  draw.rs  op_parser.rs  ops.rs  shapes.rs
src/xdot_parse/: draw.rs  op_parser.rs  shapes.rs
src/xdot_parse/draw/: attrs.rs
tests/: test_basic.py  test_draw.py  test_parse.py  test_shapes.py
