[package]
name = 'xdot'
description = 'Parse graphviz’ xdot draw instructions'
version = '0.1.0'
edition = '2021'

[features]
layout = ['graphviz-rust']

[dependencies]
bitflags = '1.3.2'
graphviz-rust = { version = '0.6.1', optional = true }
nom = '7.1.3'
pest = '2.5.4'
pest_derive = '2.5.4'
thiserror = '1.0.38'

[build-dependencies]
rustc_version = '0.4.0'
